# ndeloc

./: CHANGELOG  CMakeLists.txt  LICENSE  README.md  TODO  cnstants.h  descr.h  elements.h  goon.f  ndeloc.f  ndeloc.param.h
calc/: ndelocma.f  scaleovermat.f90
combinatorics/: CMakeLists.txt  allnr.f  ft.f  nbinom.f  nextp.f  permut.f
common/: atomlabel.f  calcdist.f  hmnumb.f  ncolumn.f  normaliz.f90  npercent.f  openfile.f  prepnumb.f  procnumb.f  showprog.f90
loopdir/: choose.f  looporb10.f  looporb11.f  looporb12.f  looporb13.f  looporb14.f  looporb3.f  looporb4.f  looporb5.f  looporb6.f  looporb7.f  looporb8.f  looporb9.f  looptree.f  ndeloc1.f  ndeloc2.f
modules/: quicksort.f90
openmp/: init_par.f  strategy.f
output/: results.f  ringhost.f
read/: atomovma.f  atovmall.f  eloc.f  fchkinfo.f  moldeninfo.f90  mwfn.f  p1fromgauss.f90  readfch.f  readmold.f90  readsom.f  readwfn.f  sudgfchk.f  sudgfdim.f  wfninfo.f
ring/: connect.f  ringdtct.f
sort/: indexx.f  indexxabs.f90
